draggable and working to do list

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div id="toDoContainer"></div>
+    <button id="clearDataBtn">Clear Data</button>
+
     <form id="toDoForm">
         <!-- Text Input -->
         <label for="title">Title:</label>
